--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,16 @@
 Turn.js
 www.turnjs.com
 
+
 ------------------------------------------------------
-Turn.js 4.0.8 - 20012/07/16
+Turn.js 4.0.9 - 2012/08/03
+------------------------------------------------------
+
++ Fixed issue when using the .own-size class
++ Event zoom.change now is preventable
+
+------------------------------------------------------
+Turn.js 4.0.8 - 2012/07/16
 ------------------------------------------------------
 
 + Added option direction
@@ -10,7 +18,7 @@ Turn.js 4.0.8 - 20012/07/16
 + Added property direction
 
 ------------------------------------------------------
-Turn.js 4.0.7 - 20012/07/12
+Turn.js 4.0.7 - 2012/07/12
 ------------------------------------------------------
 
 + Fixed a issue of the pages method
@@ -19,7 +27,7 @@ Turn.js 4.0.7 - 20012/07/12
 + Fixed issue of certain samples in IE8
 
 ------------------------------------------------------
-Turn.js 4.0.6 - 20012/07/10
+Turn.js 4.0.6 - 2012/07/10
 ------------------------------------------------------
 
 + Fixed a issue of the peel method when using the single display
@@ -28,32 +36,32 @@ Turn.js 4.0.6 - 20012/07/10
 + Added option turnCorner
 
 ------------------------------------------------------
-Turn.js 4.0.5 - 20012/06/16
+Turn.js 4.0.5 - 2012/06/16
 ------------------------------------------------------
 
 + Fixed some visualization issues of the zoom viewport
 
 ------------------------------------------------------
-Turn.js 4.0.4 - 20012/06/16
+Turn.js 4.0.4 - 2012/06/16
 ------------------------------------------------------
 
 + Fixed a problem of the method page and event start
 
 ------------------------------------------------------
-Turn.js 4.0.3 - 20012/06/16
+Turn.js 4.0.3 - 2012/06/16
 ------------------------------------------------------
 
 + Fixed minor issues of HTML4 version
 
 ------------------------------------------------------
-Turn.js 4.0.2 - 20012/06/16
+Turn.js 4.0.2 - 2012/06/16
 ------------------------------------------------------
 
 + New Zoom viewport
 + New magazine sample
 
 ------------------------------------------------------
-Turn.js 4.0.1 - 20012/06/12
+Turn.js 4.0.1 - 2012/06/12
 ------------------------------------------------------
 
 + Fixed some issues when calculating z-index of pages
