--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 Turn.js
 www.turnjs.com
 
+------------------------------------------------------
+Turn.js 4.1.0 - 2012/11/65
+------------------------------------------------------
+
++ Fixed the hard page effect in IE9
++ Fixed issue #220
 
 ------------------------------------------------------
 Turn.js 4.0.9 - 2012/08/03
